--- a/docker/integrity-hdfs/namenode/ui/explorer.html
+++ b/docker/integrity-hdfs/namenode/ui/explorer.html
@@ -23,10 +23,21 @@
     <link rel="stylesheet" type="text/css" href="/static/bootstrap-3.0.2/css/bootstrap-editable.css"/>
     <link rel="stylesheet" type="text/css" href="/static/dataTables.bootstrap.css" />
     <link rel="stylesheet" type="text/css" href="/static/hadoop.css" />
+    <link rel="stylesheet" type="text/css" href="./explorer.css" />
     <title>Browsing HDFS</title>
   </head>
   <body>
-
+    <div id="overlay">
+      <div class="row">
+        <div class="col-md-4 col-md-offset-4">
+            <div id="login-form">
+              <input name="hdfs-username" type="text" placeholder="username" class="form-control login-input" />
+              <input name="hdfs-password" type="password" placeholder="password" class="form-control login-input" />
+              <button type="button" class="btn btn-primary" id="hdfs-login">Log In</button>
+            </div>
+        </div>
+      </div>
+    </div>
     <header class="navbar navbar-inverse bs-docs-nav" role="banner">
     <div class="container">
       <div class="navbar-header">
