--- a/docker/integrity-hdfs/namenode/ui/explorer.html
+++ b/docker/integrity-hdfs/namenode/ui/explorer.html
@@ -28,6 +28,7 @@
   </head>
   <body>
     <div id="overlay">
+      <div class="alert alert-danger" id="login-error" role="alert" style="display: none"></div>
       <div class="row">
         <div class="col-md-4 col-md-offset-4">
             <div id="login-form">
